--- a/resources/src/css/non-module.css
+++ b/resources/src/css/non-module.css
@@ -7,17 +7,36 @@ main {
 }
 
 
+.overlay::selection {
+    background: transparent;
+}
+
+.crop-component::selection {
+    background: transparent;
+}
+
 .crop-blur {
+    -webkit-filter: blur(10px) sepia(0.2);
     filter: blur(3px) sepia(0.2);
 }
 
 .crop-image,
 .overlay > img {
-    width: 500px;
+    height: auto;
     display: block;
     object-fit: contain;
     object-position: center;
+    width: 500px;
 }
+
+@media (max-width: 768px) {
+    .crop-image,
+    .overlay > img {
+        height: auto;
+        width: 100%;
+    }
+}
+
 .crop-image {
     display: block;
     position: relative;
@@ -31,10 +50,11 @@ main {
 
 .crop-component {
     position: relative;
-    background-color: white;
+    display: table;
+    z-index: 999;
+    background-color: transparent;
     margin: 0 auto;
-    overflow: scroll;
-    width: 500px;
+    overflow: hidden;
 }
 
 .overlay {
@@ -46,7 +66,7 @@ main {
     margin-top: -100px;
     width: 200px;
     height: 200px;
-    box-shadow: 0 0 0 1px white;
+    box-shadow: 0 0 0 3px white;
     overflow: hidden;
     box-sizing: content-box;
 }
@@ -56,86 +76,12 @@ main {
     cursor: move;
 }
 
-.btn-crop {
-    position: fixed;
-    right: 5px;
-    bottom: 5px;
-    vertical-align: bottom;
-    padding: 6px 10px;
-    z-index: 999;
-    background-color: #DE3C50;
-    border: none;
-    border-radius: 5px;
-    color: #FFF;
-}
-
-.crop-cont {
+.center {
     display: flex;
-    align-items: center;
     justify-content: center;
-    width: 500px;
-    height: 500px;
-}
-
-
-@media (max-width: 768px) {
-    .crop-cont {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-    }
-
-    .crop-component {
-        position: absolute;
-        width: 100%;
-    }
-
-    .crop-image > img {
-        width: 100%;
-    }
-}
-
-
-
-
-.text-js {
-    opacity: 0;
-    color: white;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.cursor {
-    display: block;
-    position: absolute;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
     height: 100%;
-    top: 0;
-    right: -5px;
-    width: 2px;
-    background-color: white;
-    z-index: 1;
-    animation: flash 0.5s none infinite alternate;
-}
-
-@keyframes flash {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
-}
-
-.headline {
-    margin: 20px;
-    color: white;
-    font-size: 32px;
-    text-align: center;
-}
-
-.headline > h1 {
-    letter-spacing: 1.6px;
-    font-weight: 300;
+    background: #EAEAEA;
 }
